--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -61,6 +61,7 @@ href="FrequentlyAskedQuestions.html">FrequentlyAskedQuestions</a></li>
 <li><a href="CustomModels.html">Custom FeynRules models</a></li>
 <li><a href="DiracAlgebraFormulas.html">Useful formulas for Dirac
 algebra</a></li>
+<li><a href="Renormalization.html">Renormalization</a></li>
 <li><a href="Development.html">Development</a></li>
 </ul>
 <h2 id="tutorials">Tutorials</h2>
