Added two more functions.

--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -910,6 +910,12 @@ href="../FCLoopGetKinematicInvariants.html">FCLoopGetKinematicInvariants</a>
 - differentiates <a href="../GLI.html">GLI</a>s with respect to a scalar
 variable.</li>
 <li><a
+href="../FCLoopGLILowerDimension.html">FCLoopGLILowerDimension</a>, <a
+href="../FCLoopGLIRaiseDimension.html">FCLoopGLIRaiseDimension</a> -
+shifts dimensions of <a href="../GLI.html">GLI</a>s to <span
+class="math inline">D-2</span> or <span
+class="math inline">D+2</span>.</li>
+<li><a
 href="../FCLoopAddScalingParameter.html">FCLoopAddScalingParameter</a>,
 <a href="../FCLoopGLIExpand.html">FCLoopGLIExpand</a> - series expansion
 of expressions with <a href="../GLI.html">GLI</a>s with respect to a
