Minor update of the manual.

--- a/FeynCalcBookDev/Extra/Renormalization.html
+++ b/FeynCalcBookDev/Extra/Renormalization.html
@@ -129,10 +129,10 @@ establish a connection between bare and renormalized quantities
 appearing in the Lagrangian. For some generic masses, coupling constants
 and fields we can write</p>
 <p><span class="math display">\begin{align*}
-g_{\textrm{bare}} &amp;=  \mu^{n \varepsilon} Z_g g_{\textrm{ren}} \\
-m_{\textrm{bare}} &amp;=  Z_m m_{\textrm{ren}} \\
-\psi_{\textrm{bare}} &amp;=  \sqrt{Z_m} \psi_{\textrm{ren}} \\
-A^\mu_{\textrm{bare}} &amp;=  \sqrt{Z_A} A^\mu_{\textrm{ren}} \\
+g_{\textrm{bare}} &amp;=  \mu^{n \varepsilon} Z_g g_{\textrm{ren}}, \\
+m_{\textrm{bare}} &amp;=  Z_m m_{\textrm{ren}}, \\
+\psi_{\textrm{bare}} &amp;=  \sqrt{Z_m} \psi_{\textrm{ren}}, \\
+A^\mu_{\textrm{bare}} &amp;=  \sqrt{Z_A} A^\mu_{\textrm{ren}}. \\
 \end{align*}</span></p>
 <p>The renormalization scale <span class="math inline">\mu</span> is
 needed to account for the fact, that when going from <span
@@ -189,9 +189,9 @@ Z_x = 1 + \delta Z_x,
 <p>where <span class="math inline">\delta Z_x</span> contains poles in
 <span class="math inline">\varepsilon</span> and possibly also finite
 pieces (depending on the chosen renormalization scheme). Parametrically,
-<span class="math inline">Z_x</span> is of order of the small coupling
-constant so that we can “expand” in it as if <span
-class="math inline">Z_x \ll 1</span>.</p>
+<span class="math inline">\delta Z_x</span> is of order of the small
+coupling constant so that we can “expand” in it as if <span
+class="math inline">\delta Z_x \ll 1</span>.</p>
 <h3 id="examples-of-renormalized-and-counter-term-lagrangians">Examples
 of renormalized and counter-term Lagrangians</h3>
 <p>In the following, for the sake of convenience we drop the subscript
@@ -271,7 +271,7 @@ the usual calculations is that here we also need to derive additional
 Feynman rules for the counter terms.</p>
 <p>Although those can be always derived by hand, doing so automatically
 is more convenient and allows to avoid many stupid mistakes. To this aim
-it useful to employ <a
+it is useful to employ <a
 href="https://feynrules.irmp.ucl.ac.be/">FeynRules</a> for generating
 the corresponding FeynArts model. When writing down the Lagrangian of
 our model we need to multiply every term in the counter term Lagragnian
