--- a/FeynHelpersBookDev/Extra/FeynHelpers.html
+++ b/FeynHelpersBookDev/Extra/FeynHelpers.html
@@ -247,6 +247,7 @@ the given FIRE topology to <code>FCTopology</code></li>
 href="../FIREAutoDetectRestrictions.html">FIREAutoDetectRestrictions</a>,
 <a href="../FIREBinaryPath.html">FIREBinaryPath</a>, <a
 href="../FIREBucket.html">FIREBucket</a>, <a
+href="../FIRECalc.html">FIRECalc</a>, <a
 href="../FIRECompressor.html">FIRECompressor</a>, <a
 href="../FIREDatabase.html">FIREDatabase</a>, <a
 href="../FIREFthreads.html">FIREFthreads</a>, <a
