--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -850,6 +850,10 @@ href="../FCLoopIntegralToGraph.html">FCLoopIntegralToGraph</a>, <a
 href="../FCLoopPropagatorsToLineMomenta.html">FCLoopPropagatorsToLineMomenta</a>
 - create and plot graphs representing loop integrals</li>
 <li><a
+href="../FCLoopAddMissingHigherOrdersWarning.html">FCLoopAddMissingHigherOrdersWarning</a>
+- adds a warning flag to the given <span
+class="math inline">\epsilon</span>-expansion</li>
+<li><a
 href="../FCLoopApplyTopologyMappings.html">FCLoopApplyTopologyMappings</a>,
 <a href="../FCLoopCreateRuleGLIToGLI.html">FCLoopCreateRuleGLIToGLI</a>,
 <a href="../FCLoopFindMomentumShifts.html">FCLoopFindMomentumShifts</a>,
