--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -965,6 +965,10 @@ topology</li>
 - removes specific propagators from given <code>FCTopology</code>s or
 <code>GLI</code>s</li>
 <li><a
+href="../FCLoopReplaceQuadraticEikonalPropagators.html">FCLoopReplaceQuadraticEikonalPropagators</a>
+- tries to eliminate quadratic-eikonal propagators by completing the
+square</li>
+<li><a
 href="../FCLoopSamePropagatorHeadsQ.html">FCLoopSamePropagatorHeadsQ</a>
 - checks if the integral contains different types of propagators</li>
 <li><a
