--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -778,6 +778,8 @@ the color factor</li>
 Kronecker deltas with adjoint color indices</li>
 <li><a href="../SUNFDeltaContract.html">SUNFDeltaContract</a> -
 contracts Kronecker deltas with fundamental color indices</li>
+<li><a href="../SUNFierz.html">SUNFierz</a> - applies color Fierz
+identity</li>
 <li><a href="../SUNSimplify.html">SUNSimplify</a> - simplifies
 expressions that contain <span class="math inline">SU(N)</span>
 matrices</li>
