--- a/FeynCalcBookDev/Extra/Parallelization.html
+++ b/FeynCalcBookDev/Extra/Parallelization.html
@@ -117,6 +117,7 @@ that support automatic execution on parallel kernels</h3>
 <li><code>FCFeynmanPrepare</code></li>
 <li><code>FCLoopToPakForm</code></li>
 <li><code>FCLoopFindIntegralMappings</code></li>
+<li><code>FCLoopFindTopologyMappings</code></li>
 </ul>
 </body>
 </html>
