--- a/FeynCalcBookDev/SUNTrace.html
+++ b/FeynCalcBookDev/SUNTrace.html
@@ -117,8 +117,9 @@ evaluate all color traces involving 2 or 3 matrices in the input
 expression.</p>
 <h3 id="see-also">See also</h3>
 <p><a href="Extra/FeynCalc.html">Overview</a>, <a
-href="SUNSimplify.html">SUNSimplify</a>, <a href="SUNT.html">SUNT</a>,
-<a href="SUNTF.html">SUNTF</a>, <a href="SUNF.html">SUNF</a>, <a
+href="SUNSimplify.html">SUNSimplify</a>, <a
+href="SUNFierz.html">SUNFierz</a>, <a href="SUNT.html">SUNT</a>, <a
+href="SUNTF.html">SUNTF</a>, <a href="SUNF.html">SUNF</a>, <a
 href="SUND.html">SUND</a>, <a
 href="SUNTraceEvaluate.html">SUNTraceEvaluate</a>.</p>
 <h3 id="examples">Examples</h3>
