--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -869,6 +869,8 @@ topology identification and minimization</li>
 <li><a href="../FCGraphCuttableQ.html">FCGraphCuttableQ</a>, <a
 href="../FCGraphFindPath.html">FCGraphFindPath</a> - graph
 manipulations</li>
+<li><a href="../FCLoopAugmentTopology.html">FCLoopAugmentTopology</a> -
+adds extra propagators to the topology</li>
 <li><a
 href="../FCLoopBasisCreateScalarProducts.html">FCLoopBasisCreateScalarProducts</a>
 - auxiliary function that generates all possible loop momenta dependent
@@ -902,6 +904,8 @@ href="../FCLoopEikonalPropagatorFreeQ.html">FCLoopEikonalPropagatorFreeQ</a>
 integrals</li>
 <li><a href="../FCLoopFindSectors.html">FCLoopFindSectors</a> - returns
 sectors for the given <a href="../GLI.html">GLI</a>s</li>
+<li><a href="../FCLoopFindTensorBasis.html">FCLoopFindTensorBasis</a> -
+find a linearly independent set of external momenta</li>
 <li><a href="../FCLoopFromGLI.html">FCLoopFromGLI</a> - converts <a
 href="../GLI.html">GLI</a>s into explicit integrals with <a
 href="../FeynAmpDenominator.html">FeynAmpDenominator</a>s</li>
@@ -1294,6 +1298,7 @@ href="../$ScalarProducts.html">$ScalarProducts</a> - global variables
 needed for the proper functioning of FeynCalc</li>
 <li><a href="../A0ToB0.html">A0ToB0</a>, <a
 href="../AuxiliaryMomenta.html">AuxiliaryMomenta</a>, <a
+href="../AugmentedTopologyMarker.html">AugmentedTopologyMarker</a>, <a
 href="../B0Real.html">B0Real</a>, <a
 href="../B0Unique.html">B0Unique</a>, <a
 href="../Bracket.html">Bracket</a>, <a
@@ -1314,6 +1319,7 @@ href="../DiracTraceEvaluate.html">DiracTraceEvaluate</a>, <a
 href="../Divideout.html">Divideout</a>, <a
 href="../DotPower.html">DotPower</a>, <a
 href="../DotSimplifyRelations.html">DotSimplifyRelations</a>, <a
+href="../DropIndexSum.html">DropIndexSum</a>, <a
 href="../DropScaleless.html">DropScaleless</a>, <a
 href="../DropSumOver.html">DropSumOver</a>, <a
 href="../DummyIndex.html">DummyIndex</a>, <a
@@ -1410,7 +1416,8 @@ href="../SUNIndexNames.html">SUNIndexNames</a>, <a
 href="../SUNFIndexNames.html">SUNFIndexNames</a>, <a
 href="../SUNTraceEvaluate.html">SUNTraceEvaluate</a>, <a
 href="../SUNNToCACF.html">SUNNToCACF</a>, <a
-href="../TraceDimension.html">TraceDimension</a>, <a
+href="../TensorReductionBasisChange.html">TensorReductionBasisChange</a>,
+<a href="../TraceDimension.html">TraceDimension</a>, <a
 href="../TraceOfOne.html">TraceOfOne</a>, <a
 href="../Transversality.html">Transversality</a>, <a
 href="../TransversePolarizationVectors.html">TransversePolarizationVectors</a>,
