More docu updates.

--- a/FeynCalcBookDev/Extra/Gamma5.html
+++ b/FeynCalcBookDev/Extra/Gamma5.html
@@ -312,10 +312,10 @@ mind. For example, traces of the form</p>
 \mathrm{Tr}(\ldots \gamma^5 \gamma^{\mu_1} \ldots \gamma^{\mu_j}
 \gamma^5 \ldots )
 \end{equation}</span></p>
-<p>where the chain $ ^{_1} ^{_j}$ can be simplified to something
-like</p>
+<p>where the chain <span class="math inline">\gamma^{\mu_{1}} \ldots
+\gamma^{\mu_{j}}</span> can be simplified to something like</p>
 <p><span class="math display">\begin{equation}
-\gamma^{\mu_1} \ldots \gamma^{\mu_j} = 1 + \ldots
+\gamma^{\mu_{1}} \ldots \gamma^{\mu_{j}} = 1 + \ldots
 \end{equation}</span></p>
 <p>are not well defined in this scheme. Depending on whether one applies
 the above simplification before or after calculating the <span
