--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -60,6 +60,8 @@ FeynArts</a></li>
 <li><a href="UpperLowerIndices.html">Upper and lower indices</a></li>
 <li><a href="CustomModels.html">Custom FeynRules models</a></li>
 <li><a href="Gamma5.html">Treatment of gamma5 in D dimensions</a></li>
+<li><a href="TensorReduction.html">Tensor reduction of loop
+integrals</a></li>
 <li><a href="DiracAlgebraFormulas.html">Useful formulas for Dirac
 algebra</a></li>
 <li><a href="Renormalization.html">Renormalization</a></li>
@@ -376,6 +378,8 @@ href="../FeynCalcForm.html">FeynCalcForm</a></li>
 abbreviations</li>
 <li><a href="../FCAntiSymmetrize.html">FCAntiSymmetrize</a> -
 antisymmetrizes with respect to the given variables</li>
+<li><a href="../FCClearDataTypes.html">FCClearDataTypes</a> - removes
+all user-defined data types</li>
 <li><a href="../FCDeclareHeader.html">FCDeclareHeader</a>, <a
 href="../FCPrint.html">FCPrint</a>, <a
 href="../FCReloadAddOns.html">FCReloadAddOns</a>, <a
@@ -444,6 +448,8 @@ href="../SelectSplit.html">SelectSplit</a> - alternatives to
 Mathematica’s <code>Select</code></li>
 <li><a href="../FCSymmetrize.html">FCSymmetrize</a> - symmetrizes with
 respect to the given variables</li>
+<li><a href="../FCValuesSynchronizedQ.html">FCValuesSynchronizedQ</a> -
+checks consistency of specified definitions in the parallel mode</li>
 <li><a href="../FeynCalcHowToCite.html">FeynCalcHowToCite</a> - lists
 relevant FeynCalc publications</li>
 <li><a href="../FI.html">FI</a> - changes the output format to
@@ -562,6 +568,9 @@ class="math inline">D</span> with e.g. <span class="math inline">4-2
 \varepsilon</span></li>
 <li><a href="../FCRerouteMomenta.html">FCRerouteMomenta</a> - improves
 routing of the external momenta using momentum conservation</li>
+<li><a
+href="../FCScalarProductsSynchronizedQ.html">FCScalarProductsSynchronizedQ</a>
+- checks consistency of kinematic definitions in the parallel mode</li>
 <li><a href="../FCSchoutenBruteForce.html">FCSchoutenBruteForce</a> -
 brute force application of the <a href="../Schouten.html">Schouten</a>
 identity to minimize the number of terms</li>
