--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -60,6 +60,8 @@ FeynArts</a></li>
 <li><a href="UpperLowerIndices.html">Upper and lower indices</a></li>
 <li><a href="CustomModels.html">Custom FeynRules models</a></li>
 <li><a href="Gamma5.html">Treatment of gamma5 in D dimensions</a></li>
+<li><a href="TensorReduction.html">Tensor reduction of loop
+integrals</a></li>
 <li><a href="DiracAlgebraFormulas.html">Useful formulas for Dirac
 algebra</a></li>
 <li><a href="Renormalization.html">Renormalization</a></li>
