--- a/FeynCalcBookDev/Extra/DiracAlgebraFormulas.html
+++ b/FeynCalcBookDev/Extra/DiracAlgebraFormulas.html
@@ -71,7 +71,7 @@ p^\mu &amp; = \bar{p}^\mu + \hat{p}^\mu.
 \end{split}
 \end{align}
 </span></p>
-<p>The anticommuatators between Dirac matrices in different dimensions
+<p>The anti-commutators between Dirac matrices in different dimensions
 are given by</p>
 <p><span class="math display">
 \begin{align}
@@ -172,11 +172,11 @@ g^{\mu \nu} g_{\nu \rho} &amp; = g^\mu_\rho \\
 \bar{g}_{\nu \rho}  = 0,
 \end{split}
 \begin{split}
-g^{\mu \nu} g_{\mu \nu} &amp; = d, \\
+g^{\mu \nu} g_{\mu \nu} &amp; = D, \\
 \bar{g}^{\mu \nu} \bar{g}_{\mu \nu} &amp; = g^{\mu \nu} \bar{g}_{\mu
 \nu} = \bar{g}^{\mu \nu} g_{\mu \nu} = 4, \\
 \hat{g}^{\mu \nu} \hat{g}_{\mu \nu} &amp; = g^{\mu \nu} \hat{g}_{\mu
-\nu} = \hat{g}^{\mu \nu} g_{\mu \nu} = d-4, \\
+\nu} = \hat{g}^{\mu \nu} g_{\mu \nu} = D-4, \\
 \bar{g}^{\mu \nu} \hat{g}_{\mu \nu} &amp;= \hat{g}^{\mu \nu}
 \bar{g}_{\mu \nu}  = 0.
 \end{split}
@@ -221,10 +221,10 @@ p^\mu p_\mu &amp;= p^2, \\
 <p><span class="math display">
 \begin{align}
 \begin{split}
-\gamma^\mu \gamma^\nu \gamma_\mu &amp;= -(d-2) \gamma^\nu, \\
-\gamma^\mu \bar{\gamma}^\nu \gamma_\mu &amp;= -(d-2) \bar{\gamma}^\nu,
+\gamma^\mu \gamma^\nu \gamma_\mu &amp;= -(D-2) \gamma^\nu, \\
+\gamma^\mu \bar{\gamma}^\nu \gamma_\mu &amp;= -(D-2) \bar{\gamma}^\nu,
 \\
-\gamma^\mu \hat{\gamma}^\nu \gamma_\mu &amp;= -(d-2) \hat{\gamma}^\nu,
+\gamma^\mu \hat{\gamma}^\nu \gamma_\mu &amp;= -(D-2) \hat{\gamma}^\nu,
 \end{split} \quad \quad
 \begin{split}
 \bar{\gamma}^\mu \bar{\gamma}^\nu \bar{\gamma}_\mu &amp;= -2
@@ -235,22 +235,22 @@ p^\mu p_\mu &amp;= p^2, \\
 \hat{\gamma}^\nu, \\
 \end{split} \quad \quad \quad \quad
 \begin{split}
-\hat{\gamma}^\mu \hat{\gamma}^\nu \hat{\gamma}_\mu &amp;= -(d-6)
+\hat{\gamma}^\mu \hat{\gamma}^\nu \hat{\gamma}_\mu &amp;= -(D-6)
 \hat{\gamma}^\nu, \\
-\hat{\gamma}^\mu \gamma^\nu \hat{\gamma}_\mu &amp;= -(d-4) \gamma^\nu +
+\hat{\gamma}^\mu \gamma^\nu \hat{\gamma}_\mu &amp;= -(D-4) \gamma^\nu +
 2\hat{\gamma}^\nu, \\
-\hat{\gamma}^\mu \bar{\gamma}^\nu \hat{\gamma}_\mu &amp;= -(d-4)
+\hat{\gamma}^\mu \bar{\gamma}^\nu \hat{\gamma}_\mu &amp;= -(D-4)
 \bar{\gamma}^\nu,
 \end{split}
 \end{align}
 </span></p>
 <p><span class="math display">
 \begin{align}
-\gamma^\mu \gamma^\nu \gamma^\rho \gamma_\mu &amp;= (d-4) \gamma^\nu
+\gamma^\mu \gamma^\nu \gamma^\rho \gamma_\mu &amp;= (D-4) \gamma^\nu
 \gamma^\rho + 4 g^{\nu \rho} I, \\
-\gamma^\mu \bar{\gamma}^\nu \bar{\gamma}^\rho \gamma_\mu &amp;= (d-4)
+\gamma^\mu \bar{\gamma}^\nu \bar{\gamma}^\rho \gamma_\mu &amp;= (D-4)
 \bar{\gamma}^\nu \bar{\gamma}^\rho + 4 \bar{g}^{\nu \rho} I, \\
-\gamma^\mu \hat{\gamma}^\nu \hat{\gamma}^\rho\gamma_\mu &amp;= (d-4)
+\gamma^\mu \hat{\gamma}^\nu \hat{\gamma}^\rho\gamma_\mu &amp;= (D-4)
 \hat{\gamma}^\nu \hat{\gamma}^\rho + 4 \hat{g}^{\nu \rho} I, \\
 \bar{\gamma}^\mu \bar{\gamma}^\nu \bar{\gamma}^\rho \bar{\gamma}_\mu
 &amp;= 4 \bar{g}^{\nu \rho}, \\
@@ -261,26 +261,26 @@ p^\mu p_\mu &amp;= p^2, \\
 \bar{\gamma}^\mu \hat{\gamma}^\nu \hat{\gamma}^\rho \bar{\gamma}_\mu
 &amp;= 4 \hat{\gamma}^\nu \hat{\gamma}^\rho, \\
 \hat{\gamma}^\mu \hat{\gamma}^\nu \hat{\gamma}^\rho \hat{\gamma}_\mu
-&amp;= (d-8) \hat{\gamma}^\nu \hat{\gamma}^\rho + 4 \hat{g}^{\nu \rho}
+&amp;= (D-8) \hat{\gamma}^\nu \hat{\gamma}^\rho + 4 \hat{g}^{\nu \rho}
 I, \\
-\hat{\gamma}^\mu \gamma^\nu \gamma^\rho \hat{\gamma}_\mu &amp;= (d-4)
+\hat{\gamma}^\mu \gamma^\nu \gamma^\rho \hat{\gamma}_\mu &amp;= (D-4)
 \gamma^\nu \gamma^\rho - 2 \hat{\gamma}^\nu \gamma^\rho +
 2\hat{\gamma}^\rho \gamma^\nu, \\
 \hat{\gamma}^\mu \bar{\gamma}^\nu \bar{\gamma}^\rho \hat{\gamma}_\mu
-&amp;= (d-4) \bar{\gamma}^\nu \bar{\gamma}^\rho,
+&amp;= (D-4) \bar{\gamma}^\nu \bar{\gamma}^\rho,
 \end{align}
 </span></p>
 <p><span class="math display">
 \begin{align}
-\gamma^\mu \gamma^\nu \gamma^\rho \gamma^\sigma \gamma_\mu &amp;= -(d-4)
+\gamma^\mu \gamma^\nu \gamma^\rho \gamma^\sigma \gamma_\mu &amp;= -(D-4)
 \gamma^\nu \gamma^\rho \gamma^\sigma -2 \gamma^\sigma \gamma^\rho
 \gamma^\nu \\
 \gamma^\mu \bar{\gamma}^\nu \bar{\gamma}^\rho \bar{\gamma}^\sigma
-\gamma_\mu &amp;=-(d-4) \bar{\gamma}^\nu \bar{\gamma}^\rho
+\gamma_\mu &amp;=-(D-4) \bar{\gamma}^\nu \bar{\gamma}^\rho
 \bar{\gamma}^\sigma -2 \bar{\gamma}^\sigma \bar{\gamma}^\rho
 \bar{\gamma}^\nu  \\
 \gamma^\mu \hat{\gamma}^\nu \hat{\gamma}^\rho \hat{\gamma}^\sigma
-\gamma_\mu &amp;= -(d-4) \hat{\gamma}^\nu \hat{\gamma}^\rho
+\gamma_\mu &amp;= -(D-4) \hat{\gamma}^\nu \hat{\gamma}^\rho
 \hat{\gamma}^\sigma -2 \hat{\gamma}^\sigma \hat{\gamma}^\rho
 \hat{\gamma}^\nu  \\
 \bar{\gamma}^\mu \bar{\gamma}^\nu \bar{\gamma}^\rho \bar{\gamma}^\sigma
@@ -294,32 +294,32 @@ I, \\
 \bar{\gamma}_\mu &amp;= - 4 \hat{\gamma}^\nu \hat{\gamma}^\rho
 \hat{\gamma}^\sigma , \\
 \hat{\gamma}^\mu \hat{\gamma}^\nu \hat{\gamma}^\rho \hat{\gamma}^\sigma
-\hat{\gamma}_\mu &amp;= -(d-8) \hat{\gamma}^\nu \hat{\gamma}^\rho
+\hat{\gamma}_\mu &amp;= -(D-8) \hat{\gamma}^\nu \hat{\gamma}^\rho
 \hat{\gamma}^\sigma -2  \hat{\gamma}^\sigma \hat{\gamma}^\rho
 \hat{\gamma}^\nu \\
 \hat{\gamma}^\mu \gamma^\nu \gamma^\rho \gamma^\sigma \hat{\gamma}_\mu
-&amp;= -(d-4) \gamma^\nu \gamma^\rho \gamma^\sigma + 2 \hat{\gamma}^\nu
+&amp;= -(D-4) \gamma^\nu \gamma^\rho \gamma^\sigma + 2 \hat{\gamma}^\nu
 \gamma^\rho \gamma^\sigma - 2\hat{\gamma}^\rho \gamma^\nu \gamma^\sigma
 + 2 \hat{\gamma}^\sigma \gamma^\nu \gamma^\rho,  \\
 \hat{\gamma}^\mu \bar{\gamma}^\nu \bar{\gamma}^\rho \bar{\gamma}^\sigma
-\hat{\gamma}_\mu &amp;= -(d-4) \bar{\gamma}^\nu \bar{\gamma}^\rho
+\hat{\gamma}_\mu &amp;= -(D-4) \bar{\gamma}^\nu \bar{\gamma}^\rho
 \bar{\gamma}^\sigma,
 \end{align}
 </span></p>
 <p><span class="math display">
 \begin{align}
 \gamma^\mu \gamma^\nu \gamma^\rho \gamma^\sigma \gamma^\tau \gamma_\mu
-&amp;= (d-4) \gamma^\nu \gamma^\rho \gamma^\sigma \gamma^\tau + 2
+&amp;= (D-4) \gamma^\nu \gamma^\rho \gamma^\sigma \gamma^\tau + 2
 \gamma^\sigma \gamma^\rho \gamma^\nu \gamma^\tau + 2 \gamma^\tau
 \gamma^\nu \gamma^\rho \gamma^\sigma \\
 \gamma^\mu \bar{\gamma}^\nu \bar{\gamma}^\rho \bar{\gamma}^\sigma
-\bar{\gamma}^\tau \gamma_\mu &amp;= (d-4) \bar{\gamma}^\nu
+\bar{\gamma}^\tau \gamma_\mu &amp;= (D-4) \bar{\gamma}^\nu
 \bar{\gamma}^\rho \bar{\gamma}^\sigma \bar{\gamma}^\tau + 2
 \bar{\gamma}^\sigma \bar{\gamma}^\rho
 \bar{\gamma}^\nu  \bar{\gamma}^\tau + 2 \bar{\gamma}^\tau
 \bar{\gamma}^\nu \bar{\gamma}^\rho  \bar{\gamma}^\sigma \\
 \gamma^\mu \hat{\gamma}^\nu \hat{\gamma}^\rho \hat{\gamma}^\sigma
-\hat{\gamma}^\tau \gamma_\mu &amp;= (d-4) \hat{\gamma}^\nu
+\hat{\gamma}^\tau \gamma_\mu &amp;= (D-4) \hat{\gamma}^\nu
 \hat{\gamma}^\rho \hat{\gamma}^\sigma \hat{\gamma}^\tau +2
 \hat{\gamma}^\sigma \hat{\gamma}^\rho \hat{\gamma}^\nu \hat{\gamma}^\tau
 + 2\hat{\gamma}^\tau \hat{\gamma}^\nu \hat{\gamma}^\rho
@@ -340,33 +340,33 @@ I, \\
 \hat{\gamma}^\tau \bar{\gamma}_\mu &amp;= 4 \hat{\gamma}^\nu
 \hat{\gamma}^\rho \hat{\gamma}^\sigma \hat{\gamma}^\tau , \\
 \hat{\gamma}^\mu \hat{\gamma}^\nu \hat{\gamma}^\rho \hat{\gamma}^\sigma
-\hat{\gamma}^\tau \hat{\gamma}_\mu &amp;= (d-8) \hat{\gamma}^\nu
+\hat{\gamma}^\tau \hat{\gamma}_\mu &amp;= (D-8) \hat{\gamma}^\nu
 \hat{\gamma}^\rho \hat{\gamma}^\sigma \hat{\gamma}^\tau +
 2  \hat{\gamma}^\sigma \hat{\gamma}^\rho \hat{\gamma}^\nu
 \hat{\gamma}^\tau + 2 \hat{\gamma}^\tau \hat{\gamma}^\nu
 \hat{\gamma}^\rho \hat{\gamma}^\sigma \\
 \hat{\gamma}^\mu \gamma^\nu \gamma^\rho \gamma^\sigma \gamma^\tau
-\hat{\gamma}_\mu &amp;= (d-4) \gamma^\nu \gamma^\rho \gamma^\sigma
+\hat{\gamma}_\mu &amp;= (D-4) \gamma^\nu \gamma^\rho \gamma^\sigma
 \gamma^\tau \\
 &amp;- 2 \hat{\gamma}^\nu \gamma^\rho \gamma^\sigma \gamma^\tau +
 2\hat{\gamma}^\rho \gamma^\nu \gamma^\sigma \gamma^\tau - 2
 \hat{\gamma}^\sigma \gamma^\nu \gamma^\rho \gamma^\tau + 2
 \hat{\gamma}^\tau \gamma^\nu \gamma^\rho \gamma^\sigma,  \\
 \hat{\gamma}^\mu \bar{\gamma}^\nu \bar{\gamma}^\rho \bar{\gamma}^\sigma
-\bar{\gamma}^\tau \hat{\gamma}_\mu &amp;= (d-4) \bar{\gamma}^\nu
+\bar{\gamma}^\tau \hat{\gamma}_\mu &amp;= (D-4) \bar{\gamma}^\nu
 \bar{\gamma}^\rho \bar{\gamma}^\sigma \bar{\gamma}^\tau,
 \end{align}
 </span></p>
 <p><span class="math display">
 \begin{align}
 \gamma^\mu \gamma^\nu \gamma^\rho \gamma^\sigma \gamma^\tau
-\gamma^\kappa \gamma_\mu =&amp; -(d-4) \gamma^\nu \gamma^\rho
+\gamma^\kappa \gamma_\mu =&amp; -(D-4) \gamma^\nu \gamma^\rho
 \gamma^\sigma \gamma^\tau \gamma^\kappa \\
 &amp;- 2 \gamma^\sigma \gamma^\rho \gamma^\nu \gamma^\tau \gamma^\kappa
 - 2 \gamma^\tau \gamma^\nu \gamma^\rho \gamma^\sigma \gamma^\kappa +
 2\gamma^\kappa \gamma^\nu \gamma^\rho \gamma^\sigma \gamma^\tau \\
 \gamma^\mu \bar{\gamma}^\nu \bar{\gamma}^\rho \bar{\gamma}^\sigma
-\bar{\gamma}^\tau \bar{\gamma}^\kappa \gamma_\mu =&amp; -(d-4)
+\bar{\gamma}^\tau \bar{\gamma}^\kappa \gamma_\mu =&amp; -(D-4)
 \bar{\gamma}^\nu \bar{\gamma}^\rho \bar{\gamma}^\sigma \bar{\gamma}^\tau
 \bar{\gamma}^\kappa \\
 &amp; - 2 \bar{\gamma}^\sigma \bar{\gamma}^\rho \bar{\gamma}^\nu
@@ -375,7 +375,7 @@ I, \\
 \bar{\gamma}^\kappa + 2\bar{\gamma}^\kappa \bar{\gamma}^\nu
 \bar{\gamma}^\rho \bar{\gamma}^\sigma \bar{\gamma}^\tau\\
 \gamma^\mu \hat{\gamma}^\nu \hat{\gamma}^\rho \hat{\gamma}^\sigma
-\hat{\gamma}^\tau \hat{\gamma}^\kappa \gamma_\mu =&amp; -(d-4)
+\hat{\gamma}^\tau \hat{\gamma}^\kappa \gamma_\mu =&amp; -(D-4)
 \hat{\gamma}^\nu \hat{\gamma}^\rho \hat{\gamma}^\sigma \hat{\gamma}^\tau
 \hat{\gamma}^\kappa \\
 &amp; - 2 \hat{\gamma}^\sigma \hat{\gamma}^\rho \hat{\gamma}^\nu
@@ -404,7 +404,7 @@ I, \\
 \hat{\gamma}^\nu \hat{\gamma}^\rho \hat{\gamma}^\sigma \hat{\gamma}^\tau
 \hat{\gamma}^\kappa , \\
 \hat{\gamma}^\mu \hat{\gamma}^\nu \hat{\gamma}^\rho \hat{\gamma}^\sigma
-\hat{\gamma}^\tau \hat{\gamma}^\kappa \hat{\gamma}_\mu =&amp; -(d-8)
+\hat{\gamma}^\tau \hat{\gamma}^\kappa \hat{\gamma}_\mu =&amp; -(D-8)
 \hat{\gamma}^\nu \hat{\gamma}^\rho \hat{\gamma}^\sigma \hat{\gamma}^\tau
 \hat{\gamma}^\kappa  \\
 &amp;- 2  \hat{\gamma}^\sigma \hat{\gamma}^\rho \hat{\gamma}^\nu
@@ -413,7 +413,7 @@ I, \\
 \hat{\gamma}^\kappa + 2 \hat{\gamma}^\kappa \hat{\gamma}^\nu
 \hat{\gamma}^\rho \hat{\gamma}^\sigma \hat{\gamma}^\tau \\
 \hat{\gamma}^\mu \gamma^\nu \gamma^\rho \gamma^\sigma \gamma^\tau
-\gamma^\kappa \hat{\gamma}_\mu =&amp; -(d-4) \gamma^\nu \gamma^\rho
+\gamma^\kappa \hat{\gamma}_\mu =&amp; -(D-4) \gamma^\nu \gamma^\rho
 \gamma^\sigma \gamma^\tau \gamma^\kappa +  2 \hat{\gamma}^\nu
 \gamma^\rho \gamma^\sigma \gamma^\tau  \gamma^\kappa -
 2\hat{\gamma}^\rho \gamma^\nu \gamma^\sigma \gamma^\tau \gamma^\kappa \\
@@ -422,7 +422,7 @@ I, \\
 \gamma^\sigma \gamma^\kappa +2 \hat{\gamma}^\kappa \gamma^\nu
 \gamma^\rho \gamma^\sigma \gamma^\tau,  \\
 \hat{\gamma}^\mu \bar{\gamma}^\nu \bar{\gamma}^\rho \bar{\gamma}^\sigma
-\bar{\gamma}^\tau \bar{\gamma}^\kappa \hat{\gamma}_\mu =&amp; -(d-4)
+\bar{\gamma}^\tau \bar{\gamma}^\kappa \hat{\gamma}_\mu =&amp; -(D-4)
 \bar{\gamma}^\nu \bar{\gamma}^\rho \bar{\gamma}^\sigma \bar{\gamma}^\tau
 \bar{\gamma}^\kappa,
 \end{align}
@@ -494,13 +494,13 @@ the Dirac matrices between the index pair is odd, then</p>
 \end{align}
 </span></p>
 <p>Following formula for <span class="math inline">\gamma^\mu
-\gamma^{\nu_1} \dots \gamma^{\nu_n} \gamma_\mu</span> in d dimensions
-and <span class="math inline">n\geq 3</span> is given in Veltman’s
-Gammatrica</p>
+\gamma^{\nu_1} \dots \gamma^{\nu_n} \gamma_\mu</span> in <span
+class="math inline">D</span> dimensions and <span
+class="math inline">n\geq 3</span> is given in Veltman’s Gammatrica</p>
 <p><span class="math display">
 \begin{align}
 \gamma^\mu \gamma^{\nu_1} \dots \gamma^{\nu_n} \gamma_\mu &amp;=
-(d-4)(-1)^n \gamma^{\nu_1} \dots \gamma^{\nu_n} + 2(-1)^n \gamma^{\nu_3}
+(D-4)(-1)^n \gamma^{\nu_1} \dots \gamma^{\nu_n} + 2(-1)^n \gamma^{\nu_3}
 \gamma^{\nu_2} \gamma^{\nu_1} \gamma^{\nu_4}\dots \gamma^{\nu_n} \\
 &amp; + 2 \sum_{j=4}^m (-1)^{n-j} \gamma^{\nu_j} \gamma^{\nu_1} \dots
 \gamma^{\nu_{j-1}} \gamma^{\nu_{j+1}} \dots \gamma^{\nu_{n}}.
@@ -511,7 +511,7 @@ Gammatrica</p>
 <p><span class="math display">
 \begin{align}
 \gamma^\mu \gamma^{\nu_1} \dots \gamma^{\nu_n} \gamma_\mu &amp;= (-1)^n
-\biggl \{ (d-2n) \gamma^{\nu_1} \dots \gamma^{\nu_n} \\
+\biggl \{ (D-2n) \gamma^{\nu_1} \dots \gamma^{\nu_n} \\
 &amp; -4 \sum_{i=1}^{l-1} \sum_{j=i+1}^{l} (-1)^{j-i}  \gamma^{\nu_1}
 \dots \gamma^{\nu_{i-1}} \gamma^{\nu_{i+1}} \dots \gamma^{\nu_{j-1}}
 \gamma^{\nu_{j+1}} \dots \gamma^{\nu_n} g_{{\mu_i} {\mu_j}} \biggr \}
