--- a/FeynCalcBookDev/Extra/FeynCalc.html
+++ b/FeynCalcBookDev/Extra/FeynCalc.html
@@ -60,6 +60,8 @@ FeynArts</a></li>
 <li><a href="UpperLowerIndices.html">Upper and lower indices</a></li>
 <li><a href="CustomModels.html">Custom FeynRules models</a></li>
 <li><a href="Gamma5.html">Treatment of gamma5 in D dimensions</a></li>
+<li><a href="DiracTracesSchouten.html">Dirac traces in 4 dimensions and
+Schouten identity</a></li>
 <li><a href="TensorReduction.html">Tensor reduction of loop
 integrals</a></li>
 <li><a href="DiracAlgebraFormulas.html">Useful formulas for Dirac
@@ -734,13 +736,9 @@ expansions</li>
 <h2 id="algebra-of-noncommutative-objects">Algebra of noncommutative
 objects</h2>
 <ul>
-<li><a href="../AntiCommutator.html">AntiCommutator</a> - defines an
-anti-commutator</li>
 <li><a href="../Calc.html">Calc</a>, <a href="../Trick.html">Trick</a> -
 multiple simplifications for Dirac and <span
 class="math inline">SU(N)</span> algebra</li>
-<li><a href="../Commutator.html">Commutator</a> - defines a
-commutator</li>
 <li><a href="../CommutatorExplicit.html">CommutatorExplicit</a> -
 substitutes explicit definitions of commutators and anticommutators</li>
 <li><a href="../CommutatorOrder.html">CommutatorOrder</a> - canonical
@@ -751,6 +749,10 @@ declares noncommutative objects</li>
 products</li>
 <li><a href="../DotSimplify.html">DotSimplify</a> - expands and reorders
 noncommutative terms</li>
+<li><a href="../FCAntiCommutator.html">FCAntiCommutator</a> - defines an
+anti-commutator</li>
+<li><a href="../FCCommutator.html">FCCommutator</a> - defines a
+commutator</li>
 <li><a href="../FCMatrixIsolate.html">FCMatrixIsolate</a> - wraps Dirac,
 Pauli and <span class="math inline">SU(N)</span> objects into specified
 heads</li>
