FeynHelpers docu updated.

--- a/FeynHelpersBookDev/Extra/FeynHelpers.html
+++ b/FeynHelpersBookDev/Extra/FeynHelpers.html
@@ -300,6 +300,7 @@ reduction using Kira from the current notebook</li>
 href="../KiraFermatPath.html">KiraFermatPath</a>, <a
 href="../KiraIncomingMomenta.html">KiraIncomingMomenta</a>, <a
 href="../KiraIntegrals.html">KiraIntegrals</a>, <a
+href="../KiraIntegralOrdering.html">KiraIntegralOrdering</a>, <a
 href="../KiraJobFileName.html">KiraJobFileName</a>, <a
 href="../KiraMassDimensions.html">KiraMassDimensions</a>, <a
 href="../KiraMomentumConservation.html">KiraMomentumConservation</a>, <a
@@ -524,6 +525,7 @@ href="../QGOverwriteExistingAmplitudes.html">QGOverwriteExistingAmplitudes</a>,
 href="../QGOverwriteExistingDiagrams.html">QGOverwriteExistingDiagrams</a>,
 <a href="../QGSaveInputFile.html">QGSaveInputFile</a>, <a
 href="../QGShowOutput.html">QGShowOutput</a>, <a
+href="../QGExtraStyles.html">QGExtraStyles</a>, <a
 href="../QGFieldStyles.html">QGFieldStyles</a> - options of functions
 related to the QGRAF interface</li>
 </ul>
